dropshot/tests/fail/bad_endpoint12.stderr
error[E0277]: the trait bound `String: HttpResponse` is not satisfied
  --> tests/fail/bad_endpoint12.rs:15:6
   |
15 | ) -> Result<String, HttpError> {
   |      ^^^^^^ the trait `HttpCodedResponse` is not implemented for `String`, which is required by `Result<String, HttpError>: ResultTrait`
   |
   = help: the following other types implement trait `HttpResponse`:
             HttpResponseHeaders<T, H>
             http::response::Response<hyper::body::body::Body>
   = note: required for `String` to implement `HttpResponse`
note: required for `Result<String, HttpError>` to implement `ResultTrait`
  --> tests/fail/bad_endpoint12.rs:15:6
   |
9  | / #[endpoint {
10 | |     method = GET,
11 | |     path = "/test",
12 | | }]
   | |__- unsatisfied trait bound introduced here
...
15 |   ) -> Result<String, HttpError> {
   |        ^^^^^^

error[E0277]: the trait bound `fn(RequestContext<()>) -> impl Future<Output = Result<String, HttpError>> {<impl From<bad_response_type> for ApiEndpoint<<RequestContext<()> as RequestContextArgument>::Context>>::from::bad_response_type}: dropshot::handler::HttpHandlerFunc<_, _, _>` is not satisfied
  --> tests/fail/bad_endpoint12.rs:13:10
   |
9  | / #[endpoint {
10 | |     method = GET,
11 | |     path = "/test",
12 | | }]
   | |__- required by a bound introduced by this call
13 |   async fn bad_response_type(
   |            ^^^^^^^^^^^^^^^^^ the trait `dropshot::handler::HttpHandlerFunc<_, _, _>` is not implemented for fn item `fn(RequestContext<()>) -> impl Future<Output = Result<String, HttpError>> {<impl From<bad_response_type> for ApiEndpoint<<RequestContext<()> as RequestContextArgument>::Context>>::from::bad_response_type}`
   |
note: required by a bound in `ApiEndpoint::<Context>::new`
  --> src/api_description.rs
   |
   |     pub fn new<HandlerType, FuncParams, ResponseType>(
   |            --- required by a bound in this associated function
...
   |         HandlerType: HttpHandlerFunc<Context, FuncParams, ResponseType>,
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ApiEndpoint::<Context>::new`
